# spec-kit

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  spec-driven.md
correlation-analysis/: 01-artifacts-overview.md  02-entity-structures.md  03-correlation-chains.md  04-evolution-roadmap.md  05-design-principles.md  06-complete-example.md  README.md  ai-chat-history.md
docs/: README.md  index.md  installation.md  local-development.md  quickstart.md
learn-spec-kit/: README.md  agent-commands-guide.md  agent-commands-principles.md  agents-md-mechanism-guide.md  cli-commands-reference.md  constitution-architecture-guide.md  installation-and-quickstart.md  memory-documents-guide.md  practical-workflow-guide.md  project-structure-overview.md  quickstart-learning-guide.md  scripts-reference-guide.md  sdd-theory-guide.md  speckit-commands-guide.md  speckit-commands-principles.md  speckit-engineering-principles.md  speckit-practice-thoughts.md  speckit-theory-guide.md  tasks-implicit-page-design-guide.md  templates-system-guide.md  uvx-implementation-guide.md
memory/: constitution.md  constitution_update_checklist.md
sync-and-translate/: README.md  git-sync.ps1  git-sync.sh  string-replace.py  sync-and-translate.ps1  sync-and-translate.sh  translate-files.py  translate-md.py  translation-dict.txt
templates/: agent-file-template.md  plan-template.md  spec-template.md  tasks-template.md
update-notes/: update-notes-template.md  v0-v0.0.4+b18ef20-update-notes.md  v0.0.17+a1d14637-v0.0.20+ea90d02c-git-diff.txt  (+3 more)
(+21 files in other folders)
